--- a/app-override.css
+++ b/app-override.css
@@ -1,5 +1,5 @@
 /* Arion Edits ( Arion#1223 )  */
-
+--AnimationDelay: 10;
 @keyframes rainbowmention {
   from {
     -webkit-filter: hue-rotate(0deg);
@@ -12,7 +12,7 @@
 
 
 .el-button.is-circle {
-animation: rainbowstatus 5s infinite linear;
+animation: rainbowstatus var(--AnimationDelay)s infinite linear;
 border-color: ##00a1ff!important;
 }
 
