--- a/app-override.css
+++ b/app-override.css
@@ -9,6 +9,17 @@
   }
 }
 
+@keyframes body{
+  from
+  {
+	border-color: hue-rotate(0deg);
+  }
+  to
+  {
+	border-color: hue-rotate(360deg);
+  }
+}
+
 .el-dialog__body
 {
   border: 1px solid;
