--- a/app-override.css
+++ b/app-override.css
@@ -23,7 +23,7 @@
 {
 	100% { color: black; border-color: black; }
 }
-x-tag-legendary
+.x-tag-legendary
 {
 	animation: x-tag-legendaryAnim 15s infinite linear;
 }
