--- a/app-override.css
+++ b/app-override.css
@@ -53,7 +53,7 @@
   border-color: #00a1ff!important;
 }
 
-.label.active /* Dark Mode Fix for Desktop Notifications Displaying White */
+.active /* Dark Mode Fix for Desktop Notifications Displaying White */
 {
   background-color: #333!important;
 }
