--- a/app-override.css
+++ b/app-override.css
@@ -57,3 +57,7 @@
 {
   background-color: #333!important;
 }
+.noty_theme__mint.noty_type__error /* Removes the background from the notify so its just 'Mildly' annoying now ;) */
+{
+background-color: rgba(0, 0, 0, 0)!important;
+}
